# dm-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Makefile  README.md  test_dice.sh
.githooks/: pre-commit
.github/: actionlint.yaml
.github/workflows/: ci.yaml  commit.yaml  release.yaml  secret-scan.yaml
content/campaign/: setup_questions.yaml
content/items/: enchantments.yaml
content/items/bases/: armor.yaml  general.yaml  weapons.yaml
content/npcs/archetypes/: orc_raider.yaml  village_elder.yaml
content/npcs/name_pools/: human_northern.yaml  orc.yaml
content/rules/: abilities.yaml  conditions.yaml  damage_types.yaml  death_events.yaml  encumbrance.yaml  skills.yaml
content/world/: biomes.yaml
docs/: README.md  architecture.md  campaign-setup.md  characters.md  checks.md  content.md  encounters.md  history-log.md  ip-and-licensing.md  items.md  npcs.md  world.md
examples/: manual_demo.rs
src/: barter.rs  characters.rs  checks.rs  combat.rs  conditions.rs  config.rs  content.rs  dice.rs  dice_test.rs  effects.rs  encounters.rs  events.rs  handler.rs  httpstream.rs  inventory.rs  main.rs  npcs.rs  proficiencies.rs  rests.rs  setup.rs  stdio.rs  world.rs
src/db/: mod.rs  schema.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: character_core.rs  checks.rs  combat.rs  content_introspect.rs  dice.rs  healthz.rs  inventory.rs  npcs.rs  schema.rs  setup.rs  stdio_server_info.rs  world.rs
tests/common/: mod.rs
