[package]
name = "random-number-generator-mcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-mcp-sdk = "0.8.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hyper = { version = "1.0", features = ["server", "client", "http1"] }
rustls = "0.23"
tokio-rustls = "0.24"
async-trait = "0.1"
rust-mcp-transport = "0.8.0"
