[package]
name = "dm-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP toolkit for AI Dungeon Masters running solo d20-inspired RPG campaigns"
license = "MIT"
publish = false

[[bin]]
name = "dm-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "io-std", "signal", "net", "sync", "process", "time"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.2.1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
# client + transport-child-process are test-only (tests/stdio_server_info.rs drives the
# binary as an MCP child over stdio). Keeping them out of the release build narrows the
# surface of the `scratch` container image.
rmcp = { version = "1.5.0", features = ["client", "transport-child-process"] }
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
